force-app/main/default/objects/ImportDataFieldConf__c/ImportDataFieldConf__c.object-meta.xml
<CustomObject>
    <label>Import Data Field Configuration</label>
    <nameField>
        <label>Import Data Field Configuration Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>