force-app/main/default/objects/ImportDataFieldConf__c/fields/IF_Need__c.field-meta.xml
<CustomField>
    <fullName>IF_Need__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IF Need</label>
    <type>Checkbox</type>
</CustomField>