force-app/main/default/objects/ImportDataFieldConf__c/fields/Obj_Name__c.field-meta.xml
<CustomField>
    <fullName>Obj_Name__c</fullName>
    <label>Obj Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>