force-app/main/default/objects/ImportDataFieldConf__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_Label_Name__c</columns>
    <columns>Field_Api_Name__c</columns>
    <columns>Obj_Name__c</columns>
    <columns>IF_Need__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>