force-app/main/default/objects/ImportDataFieldConf__c/listViews/Monthly_Budget.listView-meta.xml
<ListView>
    <fullName>Monthly_Budget</fullName>
    <columns>NAME</columns>
    <columns>Field_Api_Name__c</columns>
    <columns>Field_Label_Name__c</columns>
    <columns>Data_Type__c</columns>
    <columns>IF_Need__c</columns>
    <columns>Obj_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Obj_Name__c</field>
        <operation>equals</operation>
        <value>Monthly_Budget</value>
    </filters>
    <label>Monthly Budget</label>
</ListView>