force-app/main/default/objects/ImportDataFieldConf__c/listViews/Quote_Detail.listView-meta.xml
<ListView>
    <fullName>Quote_Detail</fullName>
    <columns>NAME</columns>
    <columns>Field_Api_Name__c</columns>
    <columns>Field_Label_Name__c</columns>
    <columns>Data_Type__c</columns>
    <columns>IF_Need__c</columns>
    <columns>Obj_Name__c</columns>
    <columns>RecordType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Obj_Name__c</field>
        <operation>equals</operation>
        <value>Quote_Detail</value>
    </filters>
    <label>Quote Detail</label>
</ListView>